# PyForge

./: .editorconfig  .gitattributes  .gitignore  DEV_BUILD.bat  DEV_INSTALL.bat  DEV_LINUX_DEPLOY.sh  DEV_LINUX_VENV.sh  DEV_RUN.bat  DEV_VENV.bat  DEV_WINDOWS_DEPLOY.bat  DEV_WINDOWS_VENV.bat  README.md  RUN.bat  TODO.txt  build.json  input.json  install.nsi  manifest.json  requirements.txt  setup.json  windows_install_config.nsi
app/: __main__.py
app/config/: __init__.py  _impl_config.py
app/impl/: __init__.py  _impl.py
app/impl/cmake/: __init__.py  _impl_cmake.py
app/impl/cmake/cmd/: __init__.py  _cmd_base.py  _cmd_builder.py  _cmd_parts.py
app/impl/cmake/devfiles/: __init__.py  _impl_devfiles.py
app/impl/cmake/generator/: __init__.py  _generator_base.py  _generator_builder.py  _generator_parts.py
app/impl/jsonvalid/: __init__.py  _impl_jsonvalid.py
app/impl/structure/: __init__.py  _impl_structure.py
app/menu/: __init__.py  _impl_menu.py
buildpy/: __main__.py  pyproject.toml
buildpy/localimpl/: __init__.py  cmake.py
docs/: DEVELOPERS.md
project/app/: README.md
project/include/: README.md
project/source/: README.md
project/test/: README.md
pyforgemain/: __main__.py  menu.py
pyforgemain/impl/: __init__.py  cmake.py  jsonvalid.py  structure.py
pyforgemain/impl/cmake/: __init__.py  generator.py  generatorbuilder.py  generatorparts.py  parts.py
pyforgemain/menu/: __init__.py  menuimpl.py  option.py
